# DTImporter

./: .gitignore  README.md  pyproject.toml
dtimporter/: __init__.py  baseclass.py  datatable.py  export.py  factory.py  userdefinedenum.py
tests/: test_medival_dynasty.py
